# test_for_shacl_shape_bridges

./: .gitignore  404.html  README.md  SHAFE_tutorial.ipynb  SHARC_tests.csv  SHARC_tests.xlsx  SHARC_tests2.xlsx  SHARC_tests3.xlsx  Untitled.ipynb  code_for_shacl_bridges.py  code_for_shacl_bridges_2.py  diff_graph.ttl  expanded_graph.ttl  index.html  justfile  mermaid_chart.txt  mermaid_chart3.txt  mermaid_chart_plot_tests.ipynb  mkdocs.yml  objects.inv  pyproject.toml  shacl_validation.ttl  shacl_validation_2.ttl  test_ontology_and_data.ttl  test_ontology_and_data_1.ttl  test_ontology_and_data_3.ttl  test_shacl_sparql_1.ttl  test_shacl_sparql_2.ttl
.github/workflows/: docs.yml
DCAT_ap_plus/: .gitignore
api/: index.html
bridges/dcat_to_nfdi/: ISSUES.md  mapping_plan.json
concepts/: index.html
csv_format/: index.html
docs/: api.md  concepts.md  csv_format.md  index.md  patterns.md  root_selection.md  validate.md  yaml_format.md
docs/examples/: process_experiment.md
examples/process_experiment/: index.html
examples/process_to_experiment/: run_example.py
patterns/: index.html
root_selection/: index.html
search/: search_index.json
shacl_bridges/: __init__.py  cli.py  validate.py
shacl_bridges/core/: diff.py  graph.py  shacl.py  sparql.py
shacl_bridges/io/: csv_reader.py  rdf_utils.py  yaml_reader.py
shacl_bridges/visualize/: mermaid.py
tests/: test_core.py
tests/test_data/: split_bridge.yaml  test_ontology_and_data.rdf  test_ontology_and_data_2.ttl  test_ontology_and_data_4.ttl  (+1 more)
validate/: index.html
yaml_format/: index.html
(+30 files in other folders)
