[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shacl-bridges"
version = "0.1.0"
description = "N-to-m semantic mapping via SHACL shapes with SPARQL CONSTRUCT rules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["shacl", "sparql", "ontology", "semantic-mapping", "rdf", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0",
    "networkx>=3.0",
    "pyshacl>=0.26.0",
    "rdflib>=7.0",
    "owlrl>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
notebook = [
    "jupyter>=1.0",
    "ipython>=8.0",
]

[project.scripts]
shacl-bridges = "shacl_bridges.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shacl_bridges"]

[tool.pytest.ini_options]
testpaths = ["tests"]
